# scorecheck

./: .gitignore  G4-NOTES.md  LICENSE  PUBLISH-READINESS.md  README.md  pyproject.toml  scorecheck-ledger.jsonl
.github/workflows/: ci.yml  clean-clone.yml
fixtures/: claim_doctored.json  claim_honest.json
scorecheck/: __init__.py  adapters.py  adjudicate.py  cli.py  seal.py
tests/: test_scorecheck.py
